# kokoro-tiny

./: .gitignore  Cargo.toml  README.md
examples/: audio_formats.rs  hello_family.rs  simple.rs  test_voices.rs
src/: lib.rs  main.rs
